Implement voting commands and emergency guard recovery governance (#4)